added custo geoexpress default package

--- a/.bowerrc
+++ b/.bowerrc
@@ -1,5 +1,7 @@
 {
   "directory": "bower_components",
+  "proxy": "http://131.175.57.2:8080",
+  "https-proxy":"http://131.175.57.2:8080",
   "storage": {
           "packages": ".bower-cache",
           "registry": ".bower-registry"
