added the meanUpload and use it in testpkg public controller

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "compression": "latest",
     "connect-flash": "latest",
     "connect-modrewrite": "latest",
+    "connect-multiparty": "latest",
     "consolidate": "latest",
     "express": "^4.14.0",
     "helmet": "^2.1.1",
@@ -45,6 +46,7 @@
     "meanio-admin": "git://github.com/linnovate/meanio-admin.git#0.6.x",
     "meanio-circles": "git://github.com/linnovate/meanio-circles.git#0.6.x",
     "meanio-system": "git://github.com/linnovate/meanio-system.git#0.6.x",
+    "meanio-upload": "^1.0.3",
     "meanio-users": "git://github.com/linnovate/meanio-users.git#0.6.x",
     "morgan": "latest",
     "npm": "^3.x",
