First layers upload of shapefiles working -- super prototype.

--- a/packages/custom/geoexpress/package.json
+++ b/packages/custom/geoexpress/package.json
@@ -7,11 +7,10 @@
   },
   "mean": "0.6.0",
   "dependencies": {
-    "meanio-admin": "git://github.com/linnovate/meanio-admin.git",
-    "meanio-circles": "git://github.com/linnovate/meanio-circles.git",
     "meanio-system": "git://github.com/linnovate/meanio-system.git",
     "meanio-users": "git://github.com/linnovate/meanio-users.git",
-    "xml": "^1.0.1"
+    "meanio-circles": "git://github.com/linnovate/meanio-circles.git",
+    "meanio-admin": "git://github.com/linnovate/meanio-admin.git"
   },
   "license": "MIT"
 }
