--- a/packages/custom/testpkg/package.json
+++ b/packages/custom/testpkg/package.json
@@ -7,10 +7,11 @@
   },
   "mean": "0.6.1",
   "dependencies": {
-    "mapnik" : "3.x"
+    "mapnik-omnivore": "^8.1.0",
+    "xml": "^1.0.1"
   },
   "license": "MIT",
   "scripts": {
-    "postinstall" : "bower install"
+    "postinstall": "bower install"
   }
 }
