--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "helmet": "^2.1.1",
     "lodash": "latest",
     "meanio": "^0.9.0",
+    "meanio-admin": "git://github.com/linnovate/meanio-admin.git#0.6.x",
+    "meanio-articles": "0.0.2",
     "meanio-circles": "git://github.com/linnovate/meanio-circles.git#0.6.x",
     "meanio-system": "git://github.com/linnovate/meanio-system.git#0.6.x",
     "meanio-users": "git://github.com/linnovate/meanio-users.git#0.6.x",
