--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "compression": "latest",
     "connect-flash": "latest",
     "connect-modrewrite": "latest",
+    "connect-multiparty": "^2.0.0",
     "consolidate": "latest",
     "cross-env": "^3.0.0",
     "debug": "^2.2.0",
@@ -48,23 +49,12 @@
     "helmet": "^2.2.0",
     "jasmine": "^2.5.2",
     "lodash": "latest",
-<<<<<<< HEAD
-    "meanio": "^0.9.0",
-<<<<<<< HEAD
-    "meanio-admin": "git://github.com/linnovate/meanio-admin.git#0.6.x",
-    "meanio-articles": "0.0.2",
-    "meanio-circles": "git://github.com/linnovate/meanio-circles.git#0.6.x",
-    "meanio-system": "git://github.com/linnovate/meanio-system.git#0.6.x",
-    "meanio-users": "git://github.com/linnovate/meanio-users.git#0.6.x",
-=======
-=======
     "meanio": "~0.9.3",
->>>>>>> 15bb05b2fff427d1cb71e7e2c2ea895628e9057c
     "meanio-admin": "git://github.com/linnovate/meanio-admin.git",
     "meanio-circles": "git://github.com/linnovate/meanio-circles.git",
     "meanio-system": "git://github.com/linnovate/meanio-system.git",
+    "meanio-upload": "^1.0.3",
     "meanio-users": "git://github.com/linnovate/meanio-users.git",
->>>>>>> upstream/master
     "morgan": "latest",
     "npm": "^3.10.7",
     "protractor": "^4.0.8",
